sailfish-tests/integration-tests/tests/fails/templates/unexpected_token.stpl
{
  "name": "<%= self.name %>",
  "content": <% =self.content %>
}
